# pnnl-nrc-course

./: .gitignore  CMakeLists.txt  README.md  documentation.md
cmake/modules/: AddCafTest.cmake
graphics/: text-art.txt
src/: 00-hello-world.f  CMakeLists.txt
src/day-1/: 02-hello-world.f90  02-parallel-hello-world.f90  03-concurrent-hello.f90  04-pure-hello.f90  05-assertion_utility.f  05-pure-hello.f90  06-flying-blind.f90  07-assertion_utility.f90  07-modular-hello.f90  08-modular-hello.f90  CMakeLists.txt  assertion_implementation.f90  assertion_interface.f90  assertion_utility.f
src/day-2/: 00-modular-hello-documented.f90  01-implicit-declaration.f90  02-print-type-paramters.f90  03-co_sum.f90  04-co_reduce.f90  05-co_reduce-solution.f90  CMakeLists.txt  README.md  dog-fortran-90.f90  dog.f90  kind_parameters.f90
src/day-3/: 00-pitch.f90  01-fuel_element_interface.f90  02-fuel_element_implementation.f90  CMakeLists.txt  dog-annotated.f90  dog-verbose.f90  dog.f90  dog.py
src/day-4/: 00-pitch.f90  01-fuel_element_interface.f90  02-fuel_element_implementation.f90  03-object_interface.f90  05-polymorphism.f90  06-abstract_object_interface.f90  07-fuel_element_interface.f90  08-fuel_element_implementation.f90  09-ud-dtio.f90  10-oracle_interface.f90  11-fuel_element_interface.f90  12-test-fuel_element.f90  13-fuel_element_implementation.f90  14-oracle_implementation.f90  CMakeLists.txt
